<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/bg_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/top_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="83dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="90dp"
            android:text="@string/office"
            android:textColor="@color/white_text"
            android:gravity="center"
            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="-100dp"
        android:background="@color/bg"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:layout_editor_absoluteX="58dp">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:srcCompat="@drawable/mrdecter"
            android:contentDescription="@string/img_info" />
    </RelativeLayout>

    <EditText
        android:id="@+id/name_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="Set your Name"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/SetName"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColor="@color/white_text"
        android:textColorHint="#9E9E9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <EditText
        android:id="@+id/complaint_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/SetProblem"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColor="@color/white_text"
        android:textColorHint="#9E9E9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/save_btn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/yellow"
            android:onClick="saveDate"
            android:text="@string/save_problem_btn"
            android:textColor="@color/white_text"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/load_btn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/yellow"
            android:onClick="loadDate"
            android:text="@string/load_problem_btn"
            android:textColor="@color/white_text"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ButtonStyle,TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>